--- a/src/scss/modules/_base.scss
+++ b/src/scss/modules/_base.scss
@@ -5,7 +5,8 @@
 
 html {
     font-size: $defaultFontSize;
-  	line-height: $defaultLineHeight;
+    line-height: $defaultLineHeight;
+    height: 100%;
 }
 
 body {
@@ -13,4 +14,11 @@ body {
     color: $defaultTextColor;
     background-color: $defaultBackgroundColor;
     margin: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
