--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,9 @@
 
 // modules
 @import 'modules/base.scss';
+@import 'modules/buttons.scss';
 @import 'modules/drawer.scss';
+@import 'modules/frames.scss';
 @import 'modules/fonts.scss';
 @import 'modules/footer.scss';
 @import 'modules/icons.scss';
@@ -11,3 +13,4 @@
 @import 'modules/normalise.scss';
 @import 'modules/skip-link.scss';
 @import 'modules/splash.scss';
+@import 'modules/video.scss';
