--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,11 +1,11 @@
 /* Site Colors */
-$darkBlue: #3D5A80;
-$lightBlue: #98C1D9;
-$orange: #EE6C4D;
-$pale: #F2F2B3;
-$dark: #293241;
-$green: #75B27C;
-$pink: #F2C8B3;
+$darkBlue: #3D5A80; // 61, 90, 128
+$lightBlue: #98C1D9; // 152, 193. 217
+$orange: #EE6C4D; // 238, 108, 77
+$pale: #F2F2B3; // 242, 242, 179
+$dark: #293241; // 41, 50, 65
+$green: #75B27C; // 117, 178, 124
+$pink: #F2C8B3; // 242, 200, 179
 
 /* Fonts */
 $defaultFontStack: 'Helvetica Neue', Helvetica, Arial;
