--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -4,6 +4,9 @@
     min-height: 200px;
     padding: 8px;
     color: #fff;
+    position: relative;
+    z-index: 1;
+    //margin-top: 208px;
 
     .footer__row {
         display: flex;
