--- a/src/scss/modules/_splash.scss
+++ b/src/scss/modules/_splash.scss
@@ -1,112 +1,154 @@
-.splash-video-wrapper {
-    background-color: red;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    overflow: hidden;
-    position: relative;
-    top: 208px;
+.splash {
+    position: fixed;
+    top: 216px;
     left: 0;
-    transition: 0.5s;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    font-family: 'Roboto Condensed', $defaultFontStack;
+    font-size: #{$baseFontSize + 2}rem;
+    line-height: #{$baseFontSize + 2.4}rem;
 
-    p {
-        padding: 16px;
-        margin: 0;
+    > div {
+        margin: 0 0 8px 8px;
+        transform: translate(0);
+        will-change: transform;
+        clear: both;
+        overflow: auto;
+
+        &.splash__text {
+            padding: 8px 8px 16px 16px;
+            float: left;
+            background-color: rgba(61, 90, 128, 0.8);
+            color: #fff;
+            margin-left: 0;
+        }
+
+        &:nth-child(1) {
+            transition: all 1s;
+        }
+
+        &:nth-child(2) {
+            transition: all 1.5s;
+        }
+
+        &:nth-child(3) {
+            transition: all 1s;
+        }
     }
 
-    video {
-        width: 760px;
+    button {
+        font-size: #{$baseFontSize + 0.2}rem;
+        color: #fff;
+        float: left;
+
+        &#splash-news {
+            background-color: $green;
+        }
+
+        &#splash-random {
+            background-color: $orange;
+            color: #fff;
+        }
     }
+
 }
 
-body.body--scrolled {
-    .splash-video-wrapper {
-        top: 118px;
-        height: calc(100vh - 10px);
-    }
-}
-
-#splash {
-    min-height: 1500px;
-    transition: 0.5s;
-    background-image: url(/images/poster-xsmall-2x.jpg);
-    background-repeat: no-repeat;
-    background-position: -128px 160px;
-    background-attachment: fixed;
-
-    $size: 190%;
-    -webkit-background-size: $size;
-    -moz-background-size: $size;
-    -o-background-size: $size;
-    background-size: $size;
-}
-
-body.body--scrolled {
-    #splash {
-        background-position: -128px 90px;
-    }
-}
-
-@media(min-width: 400px) {
-    #splash {
-        background-position: -180px 160px;
-    }
-    body.body--scrolled {
-        #splash {
-            background-position: -180px 90px;
+.splash-1.splash-2 {
+    .splash {
+        > div {
+            transform: translate(-100vh);
         }
     }
 }
 
-@media(min-width: 460px) {
-    .splash-video-wrapper {
-        video {
-            width: 960px;
+.splash-1.splash-2,
+.splash-2 {
+    .splash {
+        > div:nth-child(3) {
+            opacity: 0;
         }
-    }
-    #splash {
-        background-image: url(/images/poster-medium-2x.jpg); 
-        background-position: -230px 160px;
-        $size: 220%;
-        -webkit-background-size: $size;
-        -moz-background-size: $size;
-        -o-background-size: $size;
-        background-size: $size;
-    }
-    body.body--scrolled {
-        #splash {
-            background-position: -230px 90px;
+        button {
+            opacity: 0;
         }
     }
 }
 
-@media(min-width: 460px) {
-    #splash {
-        background-position-x: center;
-        background-position-y: 160px;
-        $size: cover;
-        -webkit-background-size: $size;
-        -moz-background-size: $size;
-        -o-background-size: $size;
-        background-size: $size;
-    }
-    body.body--scrolled {
-        #splash {
-            background-position-x: center;
-            background-position-y: 90px;
+@media(min-width: 375px) {
+
+    .splash {
+        top: 224px;
+        font-size: #{$baseFontSize + 2.8}rem;
+        line-height: #{$baseFontSize + 3.2}rem;
+
+        > div {
+            margin: 0 0 16px 8px;
+        }
+
+        button {
+            font-size: #{$baseFontSize + 0.8}rem;
+            height: 46px;
+            line-height: 46px;
         }
     }
+
 }
 
-@media(min-width: 920px) {
-    .splash-video-wrapper {
-        video {
-            width: 100%;
+@media(min-width: 600px) {
+
+    .splash {
+
+        font-size: #{$baseFontSize + 3.4}rem;
+        line-height: #{$baseFontSize + 3.8}rem;
+
+        button {
+            font-size: #{$baseFontSize + 0.8}rem;
+            height: 46px;
+            line-height: 46px;
         }
     }
-    #splash {
-        background-image: url(/images/poster-large-2x.jpg); 
+
+}
+
+@media(min-width: 766px) {
+
+    .splash {
+    
+        > div {
+            &:nth-child(3) {
+                float: right;
+                opacity: 1;
+            }
+        }
+
+        button {
+            display: none;
+        }
+
     }
+
+    .splash-1.splash-2,
+    .splash-2 {
+        .splash {
+            > div:nth-child(3) {
+                opacity: 1;
+                transform: translate(100vh);
+            }
+        }
+    }
+
+}
+
+@media(min-width: 980px) {
+
+    .splash {
+        top: 232px;
+        font-size: #{$baseFontSize + 4}rem;
+        line-height: #{$baseFontSize + 4.3}rem;
+
+        > div {
+            margin: 0 0 24px 8px;
+        }
+    }
+
 }
