--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,9 @@
 
 // modules
 @import 'modules/base.scss';
+@import 'modules/base-ingredients.scss';
 @import 'modules/buttons.scss';
+@import 'modules/details.scss';
 @import 'modules/drawer.scss';
 @import 'modules/frames.scss';
 @import 'modules/fonts.scss';
