--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,7 +8,7 @@ $green: #75B27C; // 117, 178, 124
 $pink: #F2C8B3; // 242, 200, 179
 
 /* Fonts */
-$defaultFontStack: 'Helvetica Neue', Helvetica, Arial;
+$defaultFontStack: 'Roboto Condensed', 'Helvetica Neue', Helvetica, Arial;
 $defaultFontSize: 14px;
 $defaultLineHeight: 20px;
 $baseFontSize: 1;
