--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -10,7 +10,7 @@
     text-transform: uppercase;
     padding: 0 16px;
     display: inline-block;
-    font-family: 'Roboto Condensed', $defaultFontStack;
+    font-family: $defaultFontStack;
     font-size: #{$baseFontSize}rem;
     will-change: box-shadow;
     font-weight: 500;
@@ -24,5 +24,10 @@
 
     &:active {
         box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
+    }
+
+    &.cocktail-list-button {
+        background: $green;
+        color: #fff;
     }
 }
