--- a/src/scss/modules/_splash.scss
+++ b/src/scss/modules/_splash.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 2;
-    font-family: 'Roboto Condensed', $defaultFontStack;
+    font-family: $defaultFontStack;
     font-size: #{$baseFontSize + 2}rem;
     line-height: #{$baseFontSize + 2.4}rem;
 
