Lots of stuff. Added News

--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -22,12 +22,14 @@
     vertical-align: middle;
     text-decoration: none;
 
-    &:active {
+    &:active,
+    &:hover {
         box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
+        text-decoration: underline;
     }
 
-    &.cocktail-list-button {
-        background: $green;
+    &.full-details-button  {
+        background: $orange;
         color: #fff;
     }
 }
