--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 // modules
 @import 'modules/base.scss';
 @import 'modules/base-ingredients.scss';
+@import 'modules/breadcrumbs.scss';
 @import 'modules/buttons.scss';
 @import 'modules/details.scss';
 @import 'modules/drawer.scss';
@@ -12,7 +13,10 @@
 @import 'modules/icons.scss';
 @import 'modules/header.scss';
 @import 'modules/nav.scss';
+@import 'modules/news.scss';
 @import 'modules/normalise.scss';
+@import 'modules/pending.scss';
+@import 'modules/skeleton.scss';
 @import 'modules/skip-link.scss';
 @import 'modules/splash.scss';
 @import 'modules/video.scss';
