--- a/src/scss/modules/_video.scss
+++ b/src/scss/modules/_video.scss
@@ -1,7 +1,7 @@
 .video-wrapper {
     width: 100%;
     height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
+    height: calc(var(--viewHeight, 1vh) * 100);
     display: flex;
     justify-content: center;
     align-items: flex-start;
