Adding the soft skills stuff

--- a/src/scss/modules/_base-ingredients.scss
+++ b/src/scss/modules/_base-ingredients.scss
@@ -1,3 +1,9 @@
+/**
+ * Base Ingredients
+ * Used for the list type found on Base ingredients
+ * 
+ * /scss/modules/_base-ingredients.scss
+ */
 .cocktail-base {
     margin: calc(208px + 16px) auto 16px auto;
     width: calc(100% - 16px);
