--- a/src/scss/modules/_base.scss
+++ b/src/scss/modules/_base.scss
@@ -1,3 +1,9 @@
+/**
+ * Base
+ * Shared/default styles
+ * 
+ * /scss/modules/_base.scss
+ */
 * {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
