--- a/src/scss/modules/_breadcrumbs.scss
+++ b/src/scss/modules/_breadcrumbs.scss
@@ -1,3 +1,9 @@
+/**
+ * Breadcrumbs
+ * Styles the breadcrumbs
+ * 
+ * /scss/modules/_breadcrumbs.scss
+ */
 .breadcrumbs {
     display: flex;
     flex-direction: row;
