--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -1,4 +1,10 @@
-.button {
+/**
+ * Buttons
+ * Button styling
+ * 
+ * /scss/modules/_buttons.scss
+ */
+ .button {
     background: #ccc;
     color: $defaultTextColor;
     box-shadow: $boxShadow;
