--- a/src/scss/modules/_drawer.scss
+++ b/src/scss/modules/_drawer.scss
@@ -1,4 +1,10 @@
-body {
+/**
+ * Mobile Drawer / Navigation
+ * Styles the mobile navigation, shown on smaller screens
+ * 
+ * /scss/modules/_drawer.scss
+ */
+ body {
 
     .toggle-drawer {
         padding: 12px;
