--- a/src/scss/modules/_fonts.scss
+++ b/src/scss/modules/_fonts.scss
@@ -1,4 +1,10 @@
-@font-face {
+/**
+ * Fonts
+ * Non system fonts used on the site
+ * 
+ * /scss/modules/_fonts.scss
+ */
+ @font-face {
     font-family: 'Beradon Script';
     src: url('/fonts/Beradon-Script.woff') format('woff');
 }
