--- a/src/scss/modules/_frames.scss
+++ b/src/scss/modules/_frames.scss
@@ -1,5 +1,10 @@
-
-.frames {
+/**
+ * Frames
+ * Adds the little design flourish seen on the recipe pages
+ * 
+ * /scss/modules/_frames.scss
+ */
+ .frames {
     font-family: 'Beradon Frames';
     text-align: center;
     padding-top: 32px;
