--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -1,4 +1,10 @@
-header {
+/**
+ * Header
+ * Styles the header
+ * 
+ * /scss/modules/_header.scss
+ */
+ header {
     min-width: 320px;
     position: fixed;
     width: 100%;
