--- a/src/scss/modules/_icons.scss
+++ b/src/scss/modules/_icons.scss
@@ -1,4 +1,10 @@
-.material-icons {
+/**
+ * Icons
+ * Default styling for the material design icons
+ * 
+ * /scss/modules/_icons.scss
+ */
+ .material-icons {
     font-family: 'Material Icons';
     font-weight: 400;
     font-style: normal;
