--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -1,5 +1,9 @@
-
-
+/**
+ * Nav
+ * Styles the main site navigation, on desktop screens
+ * 
+ * /scss/modules/_nav.scss
+ */
 header {
 
     nav {
