--- a/src/scss/modules/_normalise.scss
+++ b/src/scss/modules/_normalise.scss
@@ -1,4 +1,10 @@
-html {
+/**
+ * Normilse
+ * Default styling, for a level playing field across browsers
+ * 
+ * /scss/modules/_breadcrumbs.scss
+ */
+ html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
