--- a/src/scss/modules/_skeleton.scss
+++ b/src/scss/modules/_skeleton.scss
@@ -1,4 +1,10 @@
-$loadingColor: $pink; 
+/**
+ * Skeleton
+ * The content loading boxes seen on API pages
+ * 
+ * /scss/modules/_skeleton.scss
+ */
+ $loadingColor: $pink; 
 
 .skeleton {
 
