--- a/src/scss/modules/_details.scss
+++ b/src/scss/modules/_details.scss
@@ -1,9 +1,29 @@
-.cocktail-details {
+/**
+ * Cocktail Details
+ * Styles the cocktail recipe pages
+ * 
+ * /scss/modules/_details.scss
+ */
+ .cocktail-details {
     background-color: $pale;
     margin: calc(208px + 16px) auto 16px auto;
     width: calc(100% - 16px);
     box-shadow: $boxShadow;
     position: relative;
+
+    .no-data {
+        margin: calc(208px + 16px) auto 16px auto;
+        width: calc(100% - 16px);
+        position: relative;
+        background-color: $pale;
+        box-shadow: $boxShadow;
+        padding: 8px 8px 8px 8px;
+        margin: 0 0 8px 0;
+        min-height: 300px;
+        font-size: 1.2rem;
+        line-height: 2rem;
+        margin: 0 0 8px;
+    }
 
     .cocktail-data {
         padding: 0 8px 8px 8px;
@@ -126,6 +146,21 @@
 
 }
 
+#category-cocktail {
+
+    .cocktail-details {
+
+        .no-data {
+            margin: 0;
+            width: 100%;
+            background-color: none;
+            box-shadow: none;
+        }
+
+    }
+
+}
+
 @media(min-width: 400px) {
     .cocktail-details {
     
@@ -174,6 +209,10 @@
     .cocktail-details {
         margin: calc(208px + 32px) auto 32px auto;
         width: calc(100% - 64px);
+
+        .no-data {
+            padding: 32px 32px 32px 32px;
+        }
     
         .cocktail-data {
             padding: 0 32px 32px 32px;
