--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,10 @@
-/* Site Colors */
+/**
+ * Variables
+ * Common values across the site
+ * 
+ * /scss/modules/variables.scss
+ */
+ /* Site Colors */
 $darkBlue: #3D5A80; // 61, 90, 128
 $lightBlue: #98C1D9; // 152, 193. 217
 $orange: #EE6C4D; // 238, 108, 77
